--- a/src/renderer/src/app.css
+++ b/src/renderer/src/app.css
@@ -1,7 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Noto%20Sans%20Buginese:700|Noto%20Sans%20Buginese:400');
 @import "tailwindcss";
 @import "tw-animate-css";
-
-@import url('https://fonts.googleapis.com/css?family=Noto%20Sans%20Buginese:700|Noto%20Sans%20Buginese:400');
 
 @theme inline {
     --color-background: var(--background);
@@ -32,6 +31,7 @@
     body {
         font-family: 'Noto Sans Buginese', sans-serif;
         font-weight: 400;
+        color: var(--text)
     }
 
     h1,
@@ -77,5 +77,35 @@
     small {
         font-size: 0.750rem;
         /* 12px */
+    }
+
+    /* Custom slider styles */
+    .slider::-webkit-slider-thumb {
+        appearance: none;
+        height: 16px;
+        width: 16px;
+        border-radius: 50%;
+        background: var(--primary);
+        cursor: pointer;
+        border: 2px solid var(--primary);
+    }
+
+    .slider::-moz-range-thumb {
+        height: 16px;
+        width: 16px;
+        border-radius: 50%;
+        background: var(--primary);
+        cursor: pointer;
+        border: 2px solid var(--primary);
+    }
+
+    .slider::-webkit-slider-track {
+        background: #374151;
+        border-radius: 4px;
+    }
+
+    .slider::-moz-range-track {
+        background: #374151;
+        border-radius: 4px;
     }
 }
